--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,5 @@ dkms.conf
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 main.cpp
+template.cpp
+template.hpp
